--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,16 @@
 # Root
-log4j.rootLogger=warn, stdout
+log4j.rootLogger=warn, console, rollingFile
 
 # Console
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
+
+# RollingFile
+log4j.appender.rollingFile=org.apache.log4j.RollingFileAppender
+log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.rollingFile.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
+log4j.appender.rollingFile.File=C:/dev/log/spring-app-db2/spring-app-db2.log
 
 # Spring
 log4j.logger.org.springframework=info
