--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,6 +19,7 @@ log4j.logger.org.springframework=info
 log4j.logger.org.hibernate.SQL=debug
 log4j.logger.org.hibernate.pretty=debug
 log4j.logger.org.hibernate.event=debug
+log4j.logger.org.hibernate.type.descriptor.sql=trace
 
 # Local
 log4j.logger.com.my.app=debug
