--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-dbutils</groupId>
+			<artifactId>commons-dbutils</artifactId>
+			<version>1.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
