--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,10 +16,10 @@ log4j.appender.rollingFile.File=C:/dev/log/spring-app-db2/spring-app-db2.log
 log4j.logger.org.springframework=info
 
 # Hibernate
-log4j.logger.org.hibernate.SQL=debug
-log4j.logger.org.hibernate.pretty=debug
-log4j.logger.org.hibernate.event=debug
-log4j.logger.org.hibernate.type.descriptor.sql=trace
+log4j.logger.org.hibernate.SQL=info
+log4j.logger.org.hibernate.pretty=info
+log4j.logger.org.hibernate.event=info
+#log4j.logger.org.hibernate.type.descriptor.sql=trace
 #log4j.logger.org.hibernate.id=debug
 
 # Local
