--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -23,4 +23,4 @@ log4j.logger.org.hibernate.event=info
 #log4j.logger.org.hibernate.id=debug
 
 # Local
-log4j.logger.com.my.app=debug
+log4j.logger.com.my.app=info
