--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,23 +4,25 @@ log4j.rootLogger=warn, console, rollingFile
 # Console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
+log4j.appender.console.layout.ConversionPattern=%d %5p [%t] (%C:%L) - %m%n
 
 # RollingFile
 log4j.appender.rollingFile=org.apache.log4j.RollingFileAppender
 log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
-log4j.appender.rollingFile.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
-log4j.appender.rollingFile.File=C:/dev/log/spring-app-db2/spring-app-db2.log
+log4j.appender.rollingFile.layout.ConversionPattern=%d %5p [%t] (%C:%L) - %m%n
+#log4j.appender.rollingFile.File=C:/dev/log/spring-app-db2/spring-app-db2.log
+log4j.appender.rollingFile.File=/opt/jar/log/spring-app-db2/spring-app-db2.log
 
 # Spring
 log4j.logger.org.springframework=info
 
 # Hibernate
-log4j.logger.org.hibernate.SQL=info
-log4j.logger.org.hibernate.pretty=info
-log4j.logger.org.hibernate.event=info
-#log4j.logger.org.hibernate.type.descriptor.sql=trace
-#log4j.logger.org.hibernate.id=debug
+log4j.logger.org.hibernate=info
+log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.pretty=debug
+log4j.logger.org.hibernate.event=debug
+log4j.logger.org.hibernate.type.descriptor.sql=trace
+log4j.logger.org.hibernate.id=debug
 
 # Local
-log4j.logger.com.my.app=info
+log4j.logger.com.my.app=debug
