--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,8 +10,8 @@ log4j.appender.console.layout.ConversionPattern=%d %5p [%t] (%C:%L) - %m%n
 log4j.appender.rollingFile=org.apache.log4j.RollingFileAppender
 log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.rollingFile.layout.ConversionPattern=%d %5p [%t] (%C:%L) - %m%n
-#log4j.appender.rollingFile.File=C:/dev/log/spring-app-db2/spring-app-db2.log
-log4j.appender.rollingFile.File=/opt/jar/log/spring-app-db2/spring-app-db2.log
+log4j.appender.rollingFile.File=C:/dev/log/spring-app-db2/spring-app-db2.log
+#log4j.appender.rollingFile.File=/opt/jar/log/spring-app-db2/spring-app-db2.log
 
 # Spring
 log4j.logger.org.springframework=info
@@ -26,3 +26,19 @@ log4j.logger.org.hibernate.id=debug
 
 # Local
 log4j.logger.com.my.app=debug
+
+####################################################################################################
+## suubini logging
+####################################################################################################
+# File appender
+log4j.appender.file=org.apache.log4j.FileAppender
+# true: 이어쓰기, false: 덮어쓰기
+log4j.appender.file.append=false
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d %5p [%t] (%C:%L) - %m%n
+log4j.appender.file.file=C:/dev/log/spring-app-db2/suubini.log
+
+# suubini logger
+log4j.logger.suubini=debug, file
+log4j.additivity.suubini=false
+####################################################################################################
