--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -39,6 +39,7 @@ log4j.appender.file.layout.ConversionPattern=%d %5p [%t] (%C:%L) - %m%n
 log4j.appender.file.file=C:/dev/log/spring-app-db2/suubini.log
 
 # suubini logger
+# private static final Log suubini = LogFactory.getLog("suubini"); 선언해서 사용
 log4j.logger.suubini=debug, file
 log4j.additivity.suubini=false
 ####################################################################################################
