--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -24,6 +24,9 @@ log4j.logger.org.hibernate.event=debug
 log4j.logger.org.hibernate.type.descriptor.sql=trace
 log4j.logger.org.hibernate.id=debug
 
+log4j.logger.javax.jms=debug
+log4j.logger.org.hornetq=debug
+
 # Local
 log4j.logger.com.my.app=debug
 
