--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -40,6 +40,7 @@ log4j.appender.file.append=false
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %5p [%t] (%C:%L) - %m%n
 log4j.appender.file.file=C:/dev/log/spring-app-db2/suubini.log
+#log4j.appender.file.file=/opt/jar/log/spring-app-db2/suubini.log
 
 # suubini logger
 # private static final Log suubini = LogFactory.getLog("suubini"); 선언해서 사용
